add banner section

--- a/style.css
+++ b/style.css
@@ -104,6 +104,104 @@ hr {
   line-height: 120%;
 }
 
+
+/* banner section */
+#banner {
+    background-image: url(./assets/hero-bg.png);
+    background-repeat: none;
+    background-size: cover;
+}
+
+.banner-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 101px 525px;
+}
+
+
+.banner-container .banner-image {
+    margin-bottom: 40px;
+    position: relative;
+}
+.banner-container .banner-image .img1 {
+    width: 450px;
+    height: 450px;
+}
+
+.banner-container .banner-image .img1 img {
+    width: 100%;
+}
+
+
+
+.banner-container .banner-image .img2 {
+    position: absolute;
+    top: 23%;
+    left: 33%;
+    height: 160px;
+    width: 160px;
+}
+
+.banner-container .banner-image .img2 img {
+    width: 100%;
+}
+
+.banner-container .banner-info h1 {
+    font-style: Extra Bold;
+    font-size: 60px;
+    font-weight: 800;
+    line-height: 73px;
+    margin-bottom: 8px;
+    text-align: center;
+}
+
+.banner-container .banner-info p {
+    font-size: 1rem;
+font-weight: 200;
+line-height: 19px;
+margin-bottom: 24px;
+}
+
+.banner-container .banner-info .btn img {
+    margin-right: 8px;
+}
+
+
+.banner-container .banner-info .btn.green {
+    background: transparent;
+    border: 2px solid #00FF88;
+}
+
+.banner-container .banner-info .banner-info-btns {
+    display: flex;
+    gap: 8px;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.new {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px 16px;
+  border-radius: 1000px; 
+  background: #00ff88; 
+  color: #1A0B2E;
+  font-weight: 600;
+  font-size: 1.125rem;
+  box-shadow:
+    0 0 12px rgba(0, 255, 127, 0.8),
+    0 0 24px rgba(0, 255, 127, 0.6),
+    0 0 48px rgba(0, 255, 127, 0.4);
+    position: absolute;
+    top: 5%;
+    left: 73%;
+}
+
+
 /* about section */
 
 #about {
